cmake_minimum_required(VERSION 3.0)

project(asio-exercises CXX)

find_package(Boost REQUIRED COMPONENTS system date_time)
add_compile_options(-std=c++11)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})

if(MSVC)
  add_definitions(-D_WIN32_WINNT=0x0501 -D_CRT_SECURE_NO_WARNINGS)
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

function(add_exercises folder name)
  cmake_parse_arguments(add_exercise "" "" "DEPENDS" ${ARGN})
  set(SOURCE "src/${folder}/${name}.cpp" ${add_exercise_DEPENDS})
  set(TARGET "${folder}-${name}")
  add_executable(${TARGET} ${SOURCE})
  source_group("src\\${folder}" FILES ${SOURCE})
  set_property(TARGET ${TARGET} PROPERTY FOLDER "${folder}")
  if (NOT MSVC) # MSVC version will use boost auto linking
      target_link_libraries(${name} ${Boost_LIBRARIES})
  endif()
endfunction()

add_exercises(timer sync)
add_exercises(timer async)
add_exercises(timer handler-args)
add_exercises(timer handler-memfn)
add_exercises(timer handler-thread-sync)
add_exercises(daytime client-tcp-sync)
add_exercises(daytime server-tcp-sync DEPENDS src/daytime/daytime.hpp)
add_exercises(daytime server-tcp-async DEPENDS src/daytime/daytime.hpp)
add_exercises(daytime client-udp-sync)
add_exercises(daytime server-udp-sync DEPENDS src/daytime/daytime.hpp)
add_exercises(daytime server-udp-async DEPENDS src/daytime/daytime.hpp)
add_exercises(daytime server-combined-async DEPENDS src/daytime/daytime.hpp)
add_exercises(chat client DEPENDS src/chat/message.hpp)
add_exercises(chat server DEPENDS src/chat/message.hpp)
